--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -221,7 +221,32 @@
     "        X = np.array(row[:3])\n",
     "        y = row[-1]\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        activation= np.dot(X,weights)+ bias\n",
+    "        if activation > 0:\n",
+    "            if y==-1:\n",
+    "            #misclassified\n",
+    "                mistakes_count= mistakes_count +1\n",
+    "                #update weights\n",
+    "                error = y-activation\n",
+    "                for i,weight in enumerate(weights):\n",
+    "                    weight = weight + error*X[i]\n",
+    "                    weights[i] = weight\n",
+    "                bias = bias + (y-error)\n",
+    "                    \n",
+    "                \n",
+    "        elif activation < 0:\n",
+    "            if y== 1:\n",
+    "                #misclassified\n",
+    "                mistakes_count= mistakes_count +1\n",
+    "                #update weights\n",
+    "                error= y - activation\n",
+    "                for i,weight in enumerate(weights):\n",
+    "                    weight = weight + error*X[i]\n",
+    "                    weights[i] = weight\n",
+    "                bias = bias + (y-error)\n",
+    "                \n",
+    "                \n",
+    "                 \n",
     "    return weights, bias, mistakes_count"
    ]
   },
@@ -248,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -265,15 +290,10 @@
    },
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-0ba3d3f88770>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m### Do not change or remove this code\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnumber_of_mistakes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mperceptron_train\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'weights: {weights}, bias: {bias}, mistakes: {number_of_mistakes}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-4-cee2144bc734>\u001b[0m in \u001b[0;36mperceptron_train\u001b[1;34m(data, weights, bias)\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;31m# YOUR CODE HERE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmistakes_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNotImplementedError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights: [4.99553831e+83 4.99553831e+83 4.99553831e+83], bias: 4.87936300156007e+83, mistakes: 4\n"
      ]
     }
    ],
@@ -285,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -328,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -341,12 +361,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights: [inf inf inf], bias: 4.87936300156007e+83, mistakes: 4\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 50\n",
     "for i in range(epochs):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    perceptron_train(data,weights,bias)\n",
     "print(f'weights: {weights}, bias: {bias}, mistakes: {number_of_mistakes}')"
    ]
   },
@@ -1938,7 +1965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
