--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 226,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 227,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -227,23 +227,22 @@
     "            #misclassified\n",
     "                mistakes_count= mistakes_count +1\n",
     "                #update weights\n",
-    "                error = y-activation\n",
+    "                error = y+activation\n",
     "                for i,weight in enumerate(weights):\n",
-    "                    weight = weight + error*X[i]\n",
+    "                    weight = weight + y*X[i]\n",
     "                    weights[i] = weight\n",
-    "                bias = bias + (y-error)\n",
-    "                    \n",
+    "                bias = bias + y\n",
     "                \n",
-    "        elif activation < 0:\n",
+    "        elif activation <= 0:\n",
     "            if y== 1:\n",
     "                #misclassified\n",
     "                mistakes_count= mistakes_count +1\n",
     "                #update weights\n",
     "                error= y - activation\n",
     "                for i,weight in enumerate(weights):\n",
-    "                    weight = weight + error*X[i]\n",
+    "                    weight = weight + y*X[i]\n",
     "                    weights[i] = weight\n",
-    "                bias = bias + (y-error)\n",
+    "                bias = bias + y\n",
     "                \n",
     "                \n",
     "                 \n",
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 228,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -293,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weights: [4.99553831e+83 4.99553831e+83 4.99553831e+83], bias: 4.87936300156007e+83, mistakes: 4\n"
+      "weights: [ 1.  -0.5  0.5], bias: 0, mistakes: 5\n"
      ]
     }
    ],
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 235,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -366,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weights: [inf inf inf], bias: 4.87936300156007e+83, mistakes: 4\n"
+      "weights: [ 1.  -0.5  0.5], bias: 0, mistakes: 5\n"
      ]
     }
    ],
@@ -437,7 +436,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Pretty doubtful as there is not learning rate. if there were we could tell the perceptron to take smaller steps and could perhaps minimize mistakes that way. So I think it is stuck in a local minimum and continuing to run the code just keeps you in the local minimum. However, the data could also not be linearly seperable, which would mean that there will always be mistakes no matter what. "
    ]
   },
   {
@@ -477,7 +476,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The order of data will affect mistakes made. for instance, if a bunch of  mistakes are made initially then the curve could be shifted \"farther down\" than normal, this would lead to more mistakes when we encounter points that are \"higher up\". but if  a mix of far down and high up points are received in alternating order, the curve will stay \"in the middle\" leading to less mistakes overall. "
    ]
   },
   {
@@ -561,8 +560,9 @@
     "        :param max_epochs: Maximum number of epochs to perform before stopping.\n",
     "        \"\"\"\n",
     "\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        for i in range(max_epochs):\n",
+    "            perceptron_train(self.X_train,self.w,self.b)\n",
+    "\n",
     "\n",
     "    def plot_model(self, decision_boundary=False):\n",
     "        \"\"\"\n",
@@ -1965,7 +1965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
